--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3.3.2"
+actix-rt = "1.1.1"
+dotenv = "0.15.0"
+config = "0.10.1"
+serde = "1.0.119"
