--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
-actix-rt = "1.1.1"
+actix-web = "4.0.0-beta.6"
+actix-rt = "2.2.0"
+tokio = "1.7.0"
 dotenv = "0.15.0"
-config = "0.10.1"
+config = "0.11.0"
 serde = "1.0.119"
 
