--- a/docker_ubuntu2004/playbook.yml
+++ b/docker_ubuntu2004/playbook.yml
@@ -5,7 +5,7 @@
 - hosts: all
   become: true
   vars_files:
-    - vars/default.yml
+    - vars/defaults-{{ansible_architecture}}.yml
 
   tasks:
     - name: Install aptitude using apt
@@ -43,6 +43,7 @@
         name: "{{ default_container_name }}{{ item }}"
         image: "{{ default_container_image }}"
         command: "{{ default_container_command }}"
-        state: present
+        state: started
         container_default_behavior: no_defaults
+        published_ports: 8080:8080
       with_sequence: count={{ create_containers }}
