--- a/docker_rs3/playbook.yml
+++ b/docker_rs3/playbook.yml
@@ -5,6 +5,7 @@
 - hosts: all
   become: true
   vars_files:
+    - vars/defaults.yml
     - vars/defaults-{{ansible_architecture}}.yml
 
   tasks:
@@ -34,13 +35,27 @@
         name: "{{ default_container_image }}"
         source: pull
 
+
+    - name: frontend_network
+      become: yes
+      docker_network:
+        name: "{{ default_container_frontend_network }}"
+        ipam_config:
+          - iprange: "{{ default_container_ip_range }}"
+            subnet: "{{ default_container_frontend_subnet }}"
+            gateway: "{{ default_container_frontend_gateway }}"
+
     # Creates the number of containers defined by the variable create_containers, using values from vars file
     - name: Create default containers
       docker_container:
         name: "{{ default_container_name }}{{ item }}"
         image: "{{ default_container_image }}"
-#        command: "{{ default_container_command }}"
         state: started
         container_default_behavior: no_defaults
         published_ports: 8080:8080
+        network_mode: default
+        networks:
+          - name: "{{ default_container_frontend_network }}"
+#          - name: "{{ default_container_backend_network }}"
       with_sequence: count={{ create_containers }}
+
