Added environment variable to actions-rs.yml

--- a/.github/workflows/actions-rs.yml
+++ b/.github/workflows/actions-rs.yml
@@ -8,6 +8,10 @@ on: [push, pull_request]
 
 name: Quickstart
 
+env:
+  SERVER.HOST: 0.0.0.0
+  SERVER.PORT: 8080
+
 jobs:
   check:
     name: Check
