Haproxy round robin load balancing working

--- a/docker_rs3/config/haproxy/haproxy.cfg
+++ b/docker_rs3/config/haproxy/haproxy.cfg
@@ -3,8 +3,7 @@ global
     log /dev/log local0
     user haproxy
     group haproxy
-    stats socket /run/haproxy/admin.sock user haproxy group haproxy mode 660 level admin
-    nbproc 2
+    # stats socket /run/haproxy/admin.sock user haproxy group haproxy mode 660 level admin
     nbthread 4
     cpu-map auto:1/1-4 0-3
     ssl-default-bind-ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
@@ -20,22 +19,26 @@ defaults
     maxconn 3000
 
 listen stats
-    bind *:8404
+    bind *:8081
     stats enable
-    stats uri /monitor
+    stats uri /
+    stats hide-version
     stats refresh 5s
 
-frontend www.mysite.com
-    bind 10.0.0.3:80
-    bind 10.0.0.3:443 ssl crt /etc/ssl/certs/mysite.pem
-    http-request redirect scheme https unless { ssl_fc }
-    use_backend api_servers if { path_beg /api/ }
-    default_backend web_servers
+frontend www.rs3.org
+    bind 192.168.5.100:8080
+    # bind *:443 ssl crt /etc/ssl/certs/mysite.pem
+    # http-request redirect scheme https unless { ssl_fc }
+    # use_backend api_servers if { path_beg /api/ }
+    default_backend rs3_servers
 
-backend web_servers
+backend rs3_servers
     balance roundrobin
-    cookie SERVERUSED insert indirect nocache
-    option httpchk HEAD /
-    default-server check maxconn 20
-    server server1 10.0.1.3:80 cookie server1
-    server server2 10.0.1.4:80 cookie server2
+    # cookie SERVERUSED insert indirect nocache
+    # option httpchk HEAD /
+    # default-server check maxconn 20
+    server rs1 192.168.10.1:8080
+    server rs2 192.168.10.2:8080
+    server rs3 192.168.10.3:8080
+    server rs4 192.168.10.4:8080
+    server rs5 192.168.10.5:8080
