--- a/docker_rs3/playbook.yml
+++ b/docker_rs3/playbook.yml
@@ -62,6 +62,16 @@
             subnet: "{{ backend_prefix }}{{ subnet }}"
             gateway: "{{ backend_prefix }}{{ gateway }}"
 
+    - name: Create haproxy directory
+      file:
+        path: /usr/local/etc/haproxy
+        state: directory
+
+    - name: Copy the haproxy configuration
+      copy:
+        src: config/haproxy/haproxy.cfg
+        dest: /usr/local/etc/haproxy/haproxy.cfg
+
     - name: Create ha_proxy container
       docker_container:
         name: ha_proxy
@@ -70,14 +80,14 @@
         restart_policy: "always"
         container_default_behavior: no_defaults
         network_mode: default
-        published_ports: ["8080:8080", "8081:8081"]
+        published_ports: ["80:80", "8081:8081"]
         networks:
           - name: "{{ public_network_name }}"
             ipv4_address: "{{ public_prefix }}100"
           - name: "{{ frontend_network_name }}"
             ipv4_address: "{{ frontend_prefix }}100"
         mounts:
-          - source: /vagrant/docker_rs3/config
+          - source: /usr/local/etc
             target: /usr/local/etc
             type: bind
 
