--- a/docker_rs3/config/haproxy/haproxy.cfg
+++ b/docker_rs3/config/haproxy/haproxy.cfg
@@ -19,7 +19,8 @@ defaults
     maxconn 3000
 
 listen stats
-    bind *:8081
+    bind *:8080 ssl crt /usr/local/etc/ssl/certs/cwe_bundle.pem
+    mode http
     stats enable
     stats uri /
     stats hide-version
@@ -27,8 +28,8 @@ listen stats
 
 frontend www.rs3.org
     bind 192.168.5.100:80
-    # bind *:443 ssl crt /etc/ssl/certs/mysite.pem
-    # http-request redirect scheme https unless { ssl_fc }
+    bind *:443 ssl crt /usr/local/etc/ssl/certs/cwe_bundle.pem
+    http-request redirect scheme https unless { ssl_fc }
     # use_backend api_servers if { path_beg /api/ }
     default_backend rs3_servers
 
