--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ web_scrape_s3_api/apirequests.txt
 /aws/terraform*
 /aws/.terraform.tfstate.lock.info
 /aws/.terraform.lock.hcl
+/docker_rs3/.secrets/
