--- a/docker_rs3/config/haproxy/haproxy_prod.cfg
+++ b/docker_rs3/config/haproxy/haproxy_prod.cfg
@@ -4,8 +4,8 @@ global
     user haproxy
     group haproxy
     # stats socket /run/haproxy/admin.sock user haproxy group haproxy mode 660 level admin
-    nbthread 4
-    cpu-map auto:1/1-4 0-3
+    nbthread 2
+    cpu-map auto:1/1-2 0-1
     ssl-default-bind-ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
     ssl-default-bind-options ssl-min-ver TLSv1.2 no-tls-tickets
 
@@ -16,19 +16,20 @@ defaults
     log global
     mode http
     option httplog
-    maxconn 3000
+    maxconn 50000
 
 listen stats
-    bind *:8080 ssl crt /usr/local/etc/ssl/certs/cwe_bundle.pem
+    bind 192.168.5.100:8080 ssl crt /usr/local/etc/ssl/certs/cwe_bundle.pem
     mode http
+    http-request redirect scheme https unless { ssl_fc }
     stats enable
     stats uri /
     stats hide-version
     stats refresh 5s
 
-frontend www.rs3.org
+frontend rs3_frontend
     bind 192.168.5.100:80
-    bind *:443 ssl crt /usr/local/etc/ssl/certs/cwe_bundle.pem
+    bind 192.168.5.100:443 ssl crt /usr/local/etc/ssl/certs/cwe_bundle.pem
     http-request redirect scheme https unless { ssl_fc }
     # use_backend api_servers if { path_beg /api/ }
     default_backend rs3_servers
