--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ actix-rt = "2.2.0"
 tokio = "1.7.0"
 dotenv = "0.15.0"
 config = "0.11.0"
-serde = "1.0.119"
+serde = "1.0.130"
 serde_json = "1.0.67"
 flurry = "0.3.1"
+deno_core = { git = "https://github.com/denoland/deno", branch = "main" }
+rusty_v8 = "0.27.0"
