Modified ansible for a single server

--- a/docker_rs3/config/haproxy/haproxy_dev.cfg
+++ b/docker_rs3/config/haproxy/haproxy_dev.cfg
@@ -40,7 +40,7 @@ backend rs3_servers
     # option httpchk HEAD /
     # default-server check maxconn 20
     server rs1 192.168.10.1:8080
-    server rs2 192.168.10.2:8080
-    server rs3 192.168.10.3:8080
-    server rs4 192.168.10.4:8080
-    server rs5 192.168.10.5:8080
+#     server rs2 192.168.10.2:8080
+#     server rs3 192.168.10.3:8080
+#     server rs4 192.168.10.4:8080
+#     server rs5 192.168.10.5:8080
